[tool.poetry]
name = "mlconjug3"
version = "0.1.0"
description = ""
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.11"
click = "^8.1.7"
defusedxml = "^0.7.1"
joblib = "^1.4.0"
python-utils = "^3.8.2"
scikit-learn = "^1.4.2"
threadpoolctl = "^3.4.0"
rich = "^13.7.1"
pyyaml = "^6.0.1"
tomlkit = "^0.12.4"


[tool.poetry.group.dev.dependencies]
defusedxml = "^0.7.1"
pytest = "^8.1.1"
sphinx = "^7.3.7"
twine = "^5.0.0"
docutils = "^0.21.1"
pytest-cov = "^5.0.0"
click = ">=8.0.3"
lxml = "^5.2.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
